html som fungerar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     
 </head>
 <body>
-    <h1>hello</h1>
+    <!--HEADERN-->
+<header class="site-header">
+<a href="#" class="logo-link">
+<img src="images/trygg.jpg" alt="en bild med text relax" class="logo">
+</a>
+    <nav class="main-nav">
+      <a href="#">Hem</a>
+      <a href="#">Om oss</a>
+      <a href="#">Kontakt</a>
+    </nav>
+</header>
+
+<!-- HERO-->
+
+<section class="hero">
+<img src="images/relax.hero.jpg" alt="en bild med text relax" class="logo">
+<figure class="hero-overlay"></figure>
+
+<section class="info-boxes">
+  <article class="box"><b>Bilförsäkring</b></article>
+  <article class="box"><b>Hemförsäkring</b></article>
+  <article class="box"><b>Olycksförsäkring</b></article>
+  <article class="box"><b>Sjukförsäkring</b></article>
+</section>
+
+<!--MAIN-->
+  <main>
+    <h2>Huvudsektion</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel purus ut libero ultricies tincidunt.</p>
+  </main>
+
+<!--FOOTER-->
+  <footer>
+    &copy; 2025 Learn More
+  </footer>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
