--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learn More</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!--HEADERN-->
-<header class="site-header">
-<a href="#" class="logo-link">
-<img src="images/trygg.jpg" alt="en bild med text relax" class="logo">
-</a>
-    <nav class="main-nav">
-      <a href="#">Hem</a>
-      <a href="#">Om oss</a>
-      <a href="#">Kontakt</a>
-    </nav>
-</header>
+    <!-- HEADER -->
+    <header class="site-header">
+        <!-- Logo, inte klickbar -->
+        <img src="images/trygg.jpg" alt="Bild med text relax" class="logo">
 
-<!-- HERO-->
+        <nav class="main-nav">
+            <a href="#">Hem</a>
+            <a href="#">Om oss</a>
+            <a href="#">Kontakt</a>
+        </nav>
+    </header>
 
-<section class="hero">
-<img src="images/relax.hero.jpg" alt="en bild med text relax" class="logo">
-<figure class="hero-overlay"></figure>
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <img src="images/relax.hero.jpg" alt="Bild med text relax" class="hero-image">
+        <figure class="hero-overlay"></figure>
+    </section>
 
-<section class="info-boxes">
-  <article class="box"><b>Bilförsäkring</b></article>
-  <article class="box"><b>Hemförsäkring</b></article>
-  <article class="box"><b>Olycksförsäkring</b></article>
-  <article class="box"><b>Sjukförsäkring</b></article>
-</section>
+    <!-- INFO BOXES -->
+    <section class="info-boxes">
+        <article class="box"><b>Bilförsäkring</b></article>
+        <article class="box"><b>Hemförsäkring</b></article>
+        <article class="box"><b>Olycksförsäkring</b></article>
+        <article class="box"><b>Sjukförsäkring</b></article>
+    </section>
 
-<!--MAIN-->
-  <main>
-    <h2>Huvudsektion</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel purus ut libero ultricies tincidunt.</p>
-  </main>
+    <!-- MAIN CONTENT -->
+    <main>
+        <h2>Huvudsektion</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel purus ut libero ultricies tincidunt.</p>
+    </main>
 
-<!--FOOTER-->
-  <footer>
-    &copy; 2025 Learn More
-  </footer>
-
+    <!-- FOOTER -->
+    <footer>
+        &copy; 2025 Learn More
+    </footer>
 
     <script src="script.js"></script>
 </body>
